--- a/maven-jenkins-plugin/pom.xml
+++ b/maven-jenkins-plugin/pom.xml
@@ -4,23 +4,28 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>15</version>
+    <version>28</version>
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
-  <artifactId>maven-http-plugin</artifactId>
-  <version>1.0.3-SNAPSHOT</version>
+  <artifactId>maven-jenkins-plugin</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
-  <name>Maven HTTP Plugin</name>
-  <description>Tools for allowing Maven to interact with the HTTP protocol</description>
+  <name>Maven Jenkins Plugin</name>
+  <description>Maven plugin that wraps Jenkins CLI</description>
   <properties>
-    <kuali.slf4j.version>1.6.1</kuali.slf4j.version>
+    <kuali.slf4j.version>1.6.4</kuali.slf4j.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-http-plugin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-http-plugin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/maven-http-plugin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-jenkins-plugin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-jenkins-plugin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/maven-jenkins-plugin</url>
   </scm>
   <dependencies>
+    <dependency>
+      <groupId>org.jenkins</groupId>
+      <artifactId>jenkins-cli</artifactId>
+      <version>1.440</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
