--- a/maven-jenkins-plugin/.project
+++ b/maven-jenkins-plugin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>maven-jenkins-plugin</name>
+  <name>jenkins-maven-plugin</name>
   <comment></comment>
   <projects>
   </projects>
