--- a/maven-jenkins-plugin/pom.xml
+++ b/maven-jenkins-plugin/pom.xml
@@ -6,10 +6,10 @@
     <version>28</version>
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
-  <artifactId>maven-jenkins-plugin</artifactId>
+  <artifactId>jenkins-maven-plugin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
-  <name>Maven Jenkins Plugin</name>
+  <name>Jenkins Maven Plugin</name>
   <description>Maven plugin that wraps Jenkins CLI</description>
   <properties>
     <jenkins.version>1.440</jenkins.version>
@@ -23,7 +23,7 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-script-ant</artifactId>
-      <version>2.0.6</version>
+      <version>2.2.1</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins</groupId>
@@ -36,17 +36,27 @@
       <scope>test</scope>
       <version>4.8.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-project</artifactId>
+      <version>2.2.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
       <plugin>
         <artifactId>maven-plugin-plugin</artifactId>
-        <version>2.5</version>
+        <version>2.9</version>
         <dependencies>
           <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-tools-ant</artifactId>
-            <version>2.5</version>
+            <version>2.9</version>
+          </dependency>
+          <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-project</artifactId>
+            <version>2.2.1</version>
           </dependency>
         </dependencies>
         <configuration>
