git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3244 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-jenkins-plugin/pom.xml
+++ b/maven-jenkins-plugin/pom.xml
@@ -60,7 +60,7 @@
           </dependency>
         </dependencies>
         <configuration>
-          <goalPrefix>hello</goalPrefix>
+          <goalPrefix>jenkins</goalPrefix>
         </configuration>
       </plugin>
     </plugins>
