git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3253 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -128,6 +128,20 @@
       </properties>
     </profile>
     <profile>
+      <id>get</id>
+      <properties>
+        <ant.target>get</ant.target>
+        <ant.phase>install</ant.phase>
+      </properties>
+    </profile>
+    <profile>
+      <id>update</id>
+      <properties>
+        <ant.target>update</ant.target>
+        <ant.phase>install</ant.phase>
+      </properties>
+    </profile>
+    <profile>
       <id>delete</id>
       <properties>
         <ant.target>delete</ant.target>
