git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3254 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -155,6 +155,7 @@
         <jenkins.svn.path>pom/trunk/parent</jenkins.svn.path>
         <jenkins.project.groupId>org.kuali.pom</jenkins.project.groupId>
         <jenkins.project.artifactId>kuali</jenkins.project.artifactId>
+        <jenkins.project.version.major>1.0</jenkins.project.version.major>
       </properties>
     </profile>
   </profiles>
