git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3255 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -54,6 +54,7 @@
     <profile>
       <id>jenkins</id>
       <properties>
+        <maven.test.skip>true</maven.test.skip>
         <ant.target>none</ant.target>
         <ant.phase>none</ant.phase>
         <ant.file>build.xml</ant.file>
