git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3256 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -150,6 +150,13 @@
       </properties>
     </profile>
     <profile>
+      <id>build</id>
+      <properties>
+        <ant.target>build</ant.target>
+        <ant.phase>install</ant.phase>
+      </properties>
+    </profile>
+    <profile>
       <id>kuali</id>
       <properties>
         <jenkins.svn.repo>${svn.foundation.repo}</jenkins.svn.repo>
