--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -166,5 +166,15 @@
         <jenkins.project.version.major>1.0</jenkins.project.version.major>
       </properties>
     </profile>
+    <profile>
+      <id>wagon</id>
+      <properties>
+        <jenkins.svn.repo>${svn.foundation.repo}</jenkins.svn.repo>
+        <jenkins.svn.path>trunk/maven-s3-wagon</jenkins.svn.path>
+        <jenkins.project.groupId>org.kuali.pom</jenkins.project.groupId>
+        <jenkins.project.artifactId>kuali</jenkins.project.artifactId>
+        <jenkins.project.version.major>1.0</jenkins.project.version.major>
+      </properties>
+    </profile>
   </profiles>
 </project>
