git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3261 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -73,20 +73,14 @@
             <directory>src/main/resources</directory>
             <filtering>true</filtering>
             <includes>
-              <include>**/jenkins/**/*.xml</include>
+              <include>**/jenkins/jobs/**/*.xml</include>
             </includes>
-            <excludes>
-              <exclude>**/jenkins/**/build.xml</exclude>
-            </excludes>
           </resource>
           <resource>
             <directory>src/main/resources</directory>
             <filtering>false</filtering>
-            <includes>
-              <include>**/jenkins/**/build.xml</include>
-            </includes>
             <excludes>
-              <exclude>**/jenkins/**/*.xml</exclude>
+              <exclude>**/jenkins/jobs/**/*.xml</exclude>
             </excludes>
           </resource>
         </resources>
