git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3264 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -66,6 +66,7 @@
         <jenkins.cli.classname>hudson.cli.CLI</jenkins.cli.classname>
         <jenkins.wait>-s</jenkins.wait>
         <jenkins.changes>-c</jenkins.changes>
+        <jenkins.plugin.id></jenkins.plugin.id>
       </properties>
       <build>
         <resources>
@@ -112,6 +113,13 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>plugin</id>
+      <properties>
+        <ant.target>install-plugin</ant.target>
+        <ant.phase>install</ant.phase>
+      </properties>
     </profile>
     <profile>
       <id>publish</id>
