git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3265 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -73,10 +73,11 @@
     </java>
   </target>
 
-  <target name="install-plugin">
+  <target name="plugin">
     <java classname="${jenkins.cli.classname}">
       <arg value="-s" />
       <arg value="${jenkins.url}" />
+      <arg value="install-plugin" />
       <arg value="${jenkins.plugin.id}" />
     </java>
   </target>
