--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -117,7 +117,7 @@
     <profile>
       <id>plugin</id>
       <properties>
-        <ant.target>install-plugin</ant.target>
+        <ant.target>plugin</ant.target>
         <ant.phase>install</ant.phase>
       </properties>
     </profile>
