--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -126,7 +126,7 @@
       <properties>
         <jenkins.mvn.goals>clean deploy site-deploy</jenkins.mvn.goals>
         <jenkins.job.name>${jenkins.project.artifactId}-publish</jenkins.job.name>
-        <jenkins.job.file>target/classes/org/kuali/cm/jenkins/jobs/publish-${scm.type}-template.xml</jenkins.job.file>
+        <jenkins.job.file>target/classes/org/kuali/cm/jenkins/jobs/publish-${jenkins.scm.type}-template.xml</jenkins.job.file>
       </properties>
     </profile>
     <profile>
@@ -167,6 +167,7 @@
     <profile>
       <id>kuali</id>
       <properties>
+        <jenkins.scm.type>svn</jenkins.scm.type>
         <jenkins.svn.repo>${svn.foundation.repo}</jenkins.svn.repo>
         <jenkins.svn.path>pom/trunk/parent</jenkins.svn.path>
         <jenkins.project.groupId>org.kuali.pom</jenkins.project.groupId>
@@ -177,6 +178,7 @@
     <profile>
       <id>wagon</id>
       <properties>
+        <jenkins.scm.type>git</jenkins.scm.type>
         <jenkins.scm.url>git://github.com/jcaddel/maven-s3-wagon.git</jenkins.scm.url>
         <jenkins.project.groupId>org.kuali.maven.wagon</jenkins.project.groupId>
         <jenkins.project.artifactId>maven-s3-wagon</jenkins.project.artifactId>
