git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3278 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -15,8 +15,8 @@
   limitations under the License.
 
 -->
-<project name="CM Tools">
-  <description>Configuration Management Tooling</description>
+<project name="Jenkins CLI Wrapper">
+  <description>Ant wrapper for Jenkins CLI calls</description>
 
   <target name="get">
     <java classname="${jenkins.cli.classname}" output="target/job.xml" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}">
