git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3279 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -118,7 +118,7 @@
     <profile>
       <id>publish</id>
       <properties>
-        <jenkins.mvn.goals>clean deploy site-deploy</jenkins.mvn.goals>
+        <jenkins.mvn.goals>clean deploy site-deploy -Pkuali-release</jenkins.mvn.goals>
         <jenkins.job.type>publish</jenkins.job.type>
       </properties>
     </profile>
