git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3284 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -64,7 +64,7 @@
         <jenkins.cli.wait>-s</jenkins.cli.wait>
         <jenkins.cli.changes>-c</jenkins.cli.changes>
         <jenkins.job.name>${jenkins.artifactId}-${jenkins.majorVersion}-${jenkins.job.type}</jenkins.job.name>
-        <jenkins.job.file>target/classes/org/kuali/cm/jenkins/jobs/${jenkins.job.type}-${jenkins.scm.type}-template.xml</jenkins.job.file>
+        <jenkins.job.file>target/classes/org/kuali/cm/jenkins/jobs/${jenkins.template.type}-${jenkins.scm.type}-template.xml</jenkins.job.file>
       </properties>
       <build>
         <resources>
