git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3289 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -65,6 +65,7 @@
         <jenkins.cli.changes>-c</jenkins.cli.changes>
         <jenkins.job.name>${jenkins.artifactId}-${jenkins.majorVersion}-${jenkins.job.type}</jenkins.job.name>
         <jenkins.job.file>target/classes/org/kuali/cm/jenkins/jobs/${jenkins.template.type}-${jenkins.scm.type}-template.xml</jenkins.job.file>
+        <jenkins.git.branch>master</jenkins.git.branch>
       </properties>
       <build>
         <resources>
