--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -65,7 +65,8 @@
         <jenkins.cli.changes>-c</jenkins.cli.changes>
         <jenkins.cli.version>1.440</jenkins.cli.version>
         <jenkins.job.name>${jenkins.project.artifactId}-${jenkins.project.majorVersion}-${jenkins.job.type}</jenkins.job.name>
-        <jenkins.job.file>target/classes/org/kuali/cm/jenkins/jobs/${jenkins.template.type}-${jenkins.scm.type}-template.xml</jenkins.job.file>
+        <jenkins.job.file>target/classes/org/kuali/cm/jenkins/jobs/${jenkins.template.type}-${jenkins.project.scm.type}-template.xml</jenkins.job.file>
+        <jenkins.project.scm.type>svn</jenkins.project.scm.type>
         <jenkins.git.branch>master</jenkins.git.branch>
       </properties>
       <build>
@@ -161,8 +162,7 @@
     <profile>
       <id>kuali</id>
       <properties>
-        <jenkins.scm.type>svn</jenkins.scm.type>
-        <jenkins.scm.url>${svn.foundation.repo}/pom/trunk/kuali</jenkins.scm.url>
+        <jenkins.project.scm.url>${svn.foundation.repo}/pom/trunk/kuali</jenkins.project.scm.url>
         <jenkins.project.groupId>org.kuali.pom</jenkins.project.groupId>
         <jenkins.project.artifactId>kuali</jenkins.project.artifactId>
         <jenkins.project.majorVersion>1.0</jenkins.project.majorVersion>
@@ -171,8 +171,7 @@
     <profile>
       <id>threads</id>
       <properties>
-        <jenkins.scm.type>svn</jenkins.scm.type>
-        <jenkins.scm.url>${svn.foundation.repo}/trunk/kuali-threads</jenkins.scm.url>
+        <jenkins.project.scm.url>${svn.foundation.repo}/trunk/kuali-threads</jenkins.project.scm.url>
         <jenkins.project.groupId>org.kuali.common.threads</jenkins.project.groupId>
         <jenkins.project.artifactId>kuali-threads</jenkins.project.artifactId>
         <jenkins.project.majorVersion>1.0</jenkins.project.majorVersion>
@@ -181,8 +180,8 @@
     <profile>
       <id>wagon</id>
       <properties>
-        <jenkins.scm.type>git</jenkins.scm.type>
-        <jenkins.scm.url>git://github.com/jcaddel/maven-s3-wagon.git</jenkins.scm.url>
+        <jenkins.project.scm.type>git</jenkins.project.scm.type>
+        <jenkins.project.scm.url>git://github.com/jcaddel/maven-s3-wagon.git</jenkins.project.scm.url>
         <jenkins.project.groupId>org.kuali.maven.wagon</jenkins.project.groupId>
         <jenkins.project.artifactId>maven-s3-wagon</jenkins.project.artifactId>
         <jenkins.project.majorVersion>1.1</jenkins.project.majorVersion>
