git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3299 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -120,7 +120,9 @@
       <properties>
         <jenkins.mvn.goals>clean deploy site-deploy -Pkuali-release</jenkins.mvn.goals>
         <jenkins.job.type>publish</jenkins.job.type>
-        <jenkins.job.description>&lt;li&gt;Publish artifacts to S3 using the same profile used during a release and deploy the Maven web site&lt;/li&gt;</jenkins.job.description>
+        <jenkins.job.description>
+          &lt;li&gt;Publish artifacts to S3 using the same profile used during a release&lt;/li&gt;
+          &lt;li&gt;Deploy the Maven web site&lt;/li&gt; </jenkins.job.description>
         <jenkins.template.type>simple</jenkins.template.type>
       </properties>
     </profile>
