--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -20,7 +20,7 @@
   <description>Configuration Management Tools</description>
   <groupId>org.kuali.cm</groupId>
   <artifactId>cm-tools</artifactId>
-  <version>1.7-SNAPSHOT</version>
+  <version>1.0.7-SNAPSHOT</version>
   <properties>
     <kuali.testjar.phase>none</kuali.testjar.phase>
     <antrun.version>1.7</antrun.version>
@@ -122,7 +122,8 @@
         <jenkins.job.type>publish</jenkins.job.type>
         <jenkins.job.description>
           &lt;li&gt;Publish artifacts to S3 using the same profile used during a release&lt;/li&gt;
-          &lt;li&gt;Deploy the Maven web site&lt;/li&gt; </jenkins.job.description>
+          &lt;li&gt;Deploy the Maven web
+          site&lt;/li&gt; </jenkins.job.description>
         <jenkins.template.type>simple</jenkins.template.type>
       </properties>
     </profile>
